<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardCornerRadius="11dp"
        android:elevation="11dp"
        app:cardUseCompatPadding="true">


    <LinearLayout
          android:layout_width="match_parent"
          android:gravity="center_vertical"
          android:padding="11dp"
          android:id="@+id/ll"
          android:layout_height="wrap_content">
          <ImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:contentDescription="@string/contact_image"
              android:id="@+id/image"
              android:src="@drawable/a"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:padding="5dp"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/contact_number"
                />
    </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

